--- a/README
+++ b/README
@@ -3,17 +3,21 @@ XML-RPC Library With XML-RPC Interface Compiler
 
 This is brand new XML-RPC library with support for:
 
-  - persistent connections over HTTP/1.1
   - SSL3/TLS1 using OpenSSL
+  - IPV6 as soon as OpenSSL 0.9.9 is released
+  - persistent connections over HTTP/1.1
   - XML-RPC interface description language (XDL)
-  - XML-RPC interface compiler
+  - XML-RPC client stubs/servlet skels compiler
+  - multiple servlets per server
+  - servlet lifetime (init -- call -- call -- fini)
+  - multiplatform (linux, migw32 on windows)
 
 XDL Compiler
 ~~~~~~~~~~~~
 
 XDL Compiler outputs following files:
 
-  (Lets suppose that we have Test interface)
+  (Lets suppose that we have Test servlet and EEE namespace)
 
   .
   |-- EEETest.h        -- Test interface types definitions
@@ -27,3 +31,9 @@ XDL Compiler outputs following files:
   |-- EEECommon.h      -- common types declared outside of servlet
   |-- EEECommon.c      -- common types access methods (for freeing/allocation)
   `-- EEECommon.xrm.h  -- marchalizers/demarchalizers for common types
+
+XR Server
+~~~~~~~~~
+
+XR Server is multithreaded (one thread per connection) TCP/IP server
+that is sittong on socket and creating 
