fix bits of manpage for compiler

--- a/xdl-compiler/xdl-compiler.1
+++ b/xdl-compiler/xdl-compiler.1
@@ -3,8 +3,8 @@
 xdl-compiler \- Compiler for \fIlibxr\fR client server interfaces written in C.
 .SH SYNOPSIS
 .B xdl-compiler
-[\fB-i\fR|\fB--install\fR]
-[\fB-o\fR|\fB--upgrade\fR]
+[\fB-i\fR|\fB--xdl\fR]
+[\fB-o\fR|\fB--out\fR]
 .CM ===========================================================================
 .SH DESCRIPTION
 \fBxdl-compiler\fR is compiler for \fIlibxr\fR client server interfaces written in C.
@@ -17,7 +17,7 @@ Input XDL file.
 \fB-o\fR, \fB--out\fR
 Output directory.
 .SH AUTHOR
-Written by Ondrej Jirman, 2005-2006
+Written by Ondrej Jirman, 2006
 .TP
 Official website: http://oss.zonio.net
 .SH BUGS
