--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
+- generate struct mainpulation functions (Type_new() Type_set() Type_get() Type_clone())
+- allow documentation comments in XDL and emit doc comments into C code
 - blobs: check that they are passed around sanely
 - any type: make xdl compiler understand any type
 - sigpipe: handle SIGPIPE signal on per thread basis in client and server
+
+- audit code
 
 - client codegen:
   doubles in lists? -- too long to fit into i->data
