--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+0.9.1 - 2006-12-01
+~~~~~~~~~~~~~~~~~~
+- Added some unit tests
+- Implemented error reporting from xr_server using GError
+- Added GSource for server integration with glib mainloop
+- Select accepting socket so that accept() doesn't block
+
 0.9.0 - Initial Release
 ~~~~~~~~~~~~~~~~~~~~~~~
-  - Initial release of libxr library. Whoa!
+- Initial release of libxr library. Whoa!
