--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.9.13 - 2007-08-20
+~~~~~~~~~~~~~~~~~~~
+- Leak tests added and detected leaks fixed.
+
 0.9.12 - 2007-08-19
 ~~~~~~~~~~~~~~~~~~~
 - Allow multiple servlets per connection. Method names now contain servlet
