--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.9.14 - 2007-09-20
+~~~~~~~~~~~~~~~~~~~
+Note: This is binary incompatible release.
+
+- Added xr_init() and xr_fini() calls.
+- Fixed make distcheck.
+- Improved xr_call dump format. It's much less space hungry.
+- Added NS_xmlrpc_error_to_string() method.
+- Implemented 'any' type. (API change: xr_value_free replaced by xr_value_unref)
+- Implemented 'take' method parameter flag. (Pass parameter ownership to the stub.)
+  See test.xdl for details.
+
 0.9.13 - 2007-08-20
 ~~~~~~~~~~~~~~~~~~~
 - Leak tests added and detected leaks fixed.
