--- a/README
+++ b/README
@@ -11,3 +11,4 @@ This is brand new XML-RPC library with support for:
   - Multiple servlets per server.
   - Servlet lifetime (init -- call -- call -- fini).
   - Multiplatform (linux, mingw32 on windows).
+  - VALA language support for client interface.
