--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,12 @@
-0.9.15 - 2007-09-30
+0.9.15 - 2007-10-29
 ~~~~~~~~~~~~~~~~~~~
 
+- Added XDL pretty printer.
+- Added vim syntax highlighting script for XDL files.
 - Added proper license notices to all files (LGPL v3).
-- Added vala language support. XDL compiler can generate VAPI file.
-- New functions: xr_client_set_http_header(), xr_client_basic_auth().
-- New mailing list! Feel free to contribute with anything. Address
-  is libxr@zhost.zonio.net
+- Added experimental vala language support. XDL compiler can generate VAPI file.
+- New mailing list. Feel free to contribute. Address is libxr@zhost.zonio.net
+  You can subscribe it here: http://zhost.zonio.net/mailman/listinfo/libxr
 
 0.9.14 - 2007-09-20
 ~~~~~~~~~~~~~~~~~~~
