--- a/README
+++ b/README
@@ -1,16 +1,36 @@
-XML-RPC Library With XML-RPC Interface Compiler
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Multi-transport RPC client/server library
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Libxr is a XML-RPC library with support for:
+Libxr is a library that allows for rapid implementation of RPC clients and
+servers in C.
 
-  - SSLv3/TLSv1 using OpenSSL.
-  - IPV6 as soon as OpenSSL 0.9.9 is released.
+Libxr features:
+  - Multiple RPC transports. (XML-RPC and JSON-RPC)
+  - RPC interface description language (XDL)
   - Persistent connections over HTTP/1.1
-  - Servlet "session" support for non-persistent connections.
-  - Multiple RPC transports. (XML-RPC and JSON).
-  - XML-RPC interface description language (XDL).
-  - XML-RPC client stubs/servlet skels compiler.
-  - Multiple servlets per server.
-  - Servlet lifetime (init -- call -- call -- fini).
-  - Multi-platform (linux, mingw32 on windows).
-  - VALA language support for client interface.
+  - Server "session" support for non-persistent connections
+  - Multi-platform support (Linux, Windows, ...)
+  - SSLv3/TLSv1 using OpenSSL
+  - IPV6 as soon as OpenSSL 0.9.9 is released
+  - VALA language support for client interfaces
+  - Multiple interfaces per server
+
+Libxr has two parts, library itself and RPC interface description language
+compiler (XDL compiler). Thanks to the XDL compiler, you can create and
+implement complex RPC interfaces in a very short time. Here is an obligatory
+"Hello world!" example XDL file:
+
+  namespace X;
+  servlet Test {
+    boolean sayHello()
+    <%
+      printf("Hello World!");
+      return TRUE;
+    %>
+  }
+
+Whenever you call XTest.sayHello() RPC method, "Hello World!" will be printed to
+the server's standard output.
+
+For more information see HOWTO tutorial, libxr API documentation or tests/
+directory.
