--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+0.9.91 - 2008-01-07 (1.0.0-rc2)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Again, this release is backward incompatible with previous libxr releases,
+because of support for implicit string XML-RPC values.
+
+- Support implicit string values in XML-RPC (thanks to David Lee).
+- Relicensed to include LGPLv2 in addition to LGPLv3.
+- Updated docs.
+
 0.9.90 - 2007-12-10 (1.0.0-rc1)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Note: This is source and binary incompatible release.
