--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.9.94 - 2008-04-08 (1.0.0-rc5)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Bugfix release.
+
+- HTTP code 1 was always returned.
+
 0.9.93 - 2008-04-05 (1.0.0-rc4)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 - Session handling was changed:
