--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
 Libxr was written by:
 
 	Ondrej Jirman <ondrej.jirman@zonio.net> (Original author)
+
+Contributors:
+
+	David Lee <live4thee@gmail.com>
