prepare for the 0.9.97 release

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,16 @@
 Libxr was written by:
 
-	Ondrej Jirman <ondrej.jirman@zonio.net> (Original author)
+  Ondrej Jirman <megous@megous.com> (Original author)
+
 
 Contributors:
 
-	David Lee <live4thee@gmail.com>
+  David Lee <live4thee@gmail.com>
+  Diego Pettenò <flameeyes@gmail.com>
+
+
+The support is currently provided on the mailing list:
+
+  libxr@zhost.zonio.net
+
+Subscribe at: http://zhost.zonio.net/mailman/listinfo/libxr
